--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/vite": "^4.1.8",
     "@tanstack/react-query": "^5.81.2",
     "@tanstack/react-query-devtools": "^5.81.2",
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
