--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ahmed2020026.github.io/Portifolio.",
+  "homepage": "https://ahmed2020026.github.io/Portifolio_v2",
   "name": "vite-project",
   "private": true,
   "version": "0.0.0",
