--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-router-dom": "^7.6.3",
     "router": "^2.2.0",
     "styled-components": "^6.1.19",
-    "tailwindcss": "^4.1.8"
+    "tailwindcss": "^4.1.8",
+    "toastify-js": "^1.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
